Adding text to redovisning kmom01.

--- a/content/redovisning/01_kmom01.md
+++ b/content/redovisning/01_kmom01.md
@@ -4,3 +4,29 @@ Redovisning kmom01
 =========================
 
 Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/01_kmom01.md`.
+
+
+Här lägger jag till redovisningstext för kmom01.
+
+
+Är du sedan tidigare van att jobba i ramverk för att bygga webbplatser?
+
+Att arbeta i ramverk för att bygga webbplatser är helt nytt för mig. Det har varit väldigt spännande att lära sig men det tog lite tid att sätta sig in i allting.
+
+
+Det blev en del nya verktyg och tekniker i labbmiljön och för att jobba med redovisa sidan, är du bekant med några av dem sedan tidigare?
+
+De nya verktygen och tekniker i labbmiljön är jag inte bekant med sedan tidigare. Det var dock bra att det fanns mycket material som jag kunde gå igenom när jag arbetade med redovisa sidan. Det tog dock ganska lång tid att gå igenom allt material.
+
+
+Har du några förutfattade meningar, eller kanske en etablerad övertygelse, inom design och användbarhet för webben?
+
+Jag har inte haft någon etablerad övertygelse inom design och användbarhet för webben. Om man tar förutfattade meningar har det möjligtvis varit att man måste vara väldigt kreativ, konstnärlig och duktig för att arbeta med design och användbarhet och att det därför är väldigt svårt att bli bra på det.
+
+
+Hur kändes det att styla webbplatsen med CSS? Gick det bra?
+
+
+Vilken är din TIL för detta kmom?
+
+Jag har fått lära mig mycket nytt i detta kmom eftersom det var mycket nytt som introducerades och som jag inte har haft koll på innan. 
