Adding content to redovisning.

--- a/content/redovisning/01_kmom01.md
+++ b/content/redovisning/01_kmom01.md
@@ -11,12 +11,12 @@ Här lägger jag till redovisningstext för kmom01.
 
 * Är du sedan tidigare van att jobba i ramverk för att bygga webbplatser?
 
-  Att arbeta i ramverk för att bygga webbplatser är helt nytt för mig. Det har varit väldigt spännande att lära sig men det tog lite tid att sätta sig in i allting.
+  Att arbeta i ramverk för att bygga webbplatser är nytt för mig. Det har varit väldigt spännande att lära sig men det tog lite tid att sätta sig in i allting.
 
 
 * Det blev en del nya verktyg och tekniker i labbmiljön och för att jobba med redovisa sidan, är du bekant med några av dem sedan tidigare?
 
-  De nya verktygen och tekniker i labbmiljön är jag inte bekant med sedan tidigare. Det var dock bra att det fanns mycket material som jag kunde gå igenom när jag arbetade med redovisa sidan. Det tog dock ganska lång tid att gå igenom allt material.
+  De nya verktygen och tekniker i labbmiljön är jag inte bekant med sedan tidigare. Det var dock bra att det fanns mycket material som jag kunde gå igenom när jag arbetade med redovisa-sidan. Det tog dock ganska lång tid att gå igenom allt material.
 
 
 * Har du några förutfattade meningar, eller kanske en etablerad övertygelse, inom design och användbarhet för webben?
@@ -26,6 +26,7 @@ Här lägger jag till redovisningstext för kmom01.
 
 * Hur kändes det att styla webbplatsen med CSS? Gick det bra?
 
+  Det jag gjorde nu i kmom01 var att börja styla webbplatsen för att få en fungerande webbplats. Eftersom vi ska fortsätta att arbeta med style har jag inte lagt ner så mycket arbete på det i detta kmom. Jag tyckte att det var viktigast att få in uppgiften så fort som möjligt då jag ligger efter. 
 
 * Vilken är din TIL för detta kmom?
 
