Added more content.

--- a/content/redovisning/01_kmom01.md
+++ b/content/redovisning/01_kmom01.md
@@ -26,8 +26,8 @@ Här lägger jag till redovisningstext för kmom01.
 
 * Hur kändes det att styla webbplatsen med CSS? Gick det bra?
 
-  Det jag gjorde nu i kmom01 var att börja styla webbplatsen för att få en fungerande webbplats. Eftersom vi ska fortsätta att arbeta med style har jag inte lagt ner så mycket arbete på det i detta kmom. Jag tyckte att det var viktigast att få in uppgiften så fort som möjligt då jag ligger efter. 
+  Det jag gjorde nu i kmom01 var att börja styla webbplatsen för att få en fungerande webbplats. Eftersom vi ska fortsätta att arbeta med style har jag inte lagt ner så mycket arbete på det i detta kmom. Jag tyckte att det var viktigast att få in uppgiften så fort som möjligt då jag ligger efter.
 
 * Vilken är din TIL för detta kmom?
 
-  Jag har fått lära mig mycket nytt i detta kmom eftersom det var mycket nytt som introducerades och som jag inte har haft koll på innan.
+  Jag har fått lära mig mycket nytt i detta kmom eftersom det var mycket nytt som introducerades. Markdown, Git och GitHub var helt nytt för mig så det lärde jag mig i detta kmom. Att arbeta med ramverk var också nytt. 
