--- a/content/redovisning/02_kmom02.md
+++ b/content/redovisning/02_kmom02.md
@@ -2,5 +2,30 @@
 ---
 Redovisning kmom02
 =========================
-
+<!--
 Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/02_kmom02.md`.
+-->
+
+* Vad tycker du om LESS och det sättet vi jobbar med LESS-moduler?
+
+Det var intressant att börja med LESS och att jobba med LESS-moduler. Det kändes ganska lätt att komma in
+i och förstå LESS när man kan lite CSS. Det är fortfarande lite ovant att arbeta på det här sättet men
+det känns som att det kommer att gå bra. Video-serien var bra för där fick man grunderna i LESS.
+
+* Är du bekant med Makefiler och make sedan tidigare, eller något liknande byggverktyg? Vad anser du om det?
+
+Jag är inte bekant med Makefiler och make sedan tidigare. Jag har inte heller använt mig av något liknande
+byggverktyg sedan tidigare. Det kändes helt okej att börja med och det gick ganska bra att komma in i det
+också. Det kändes ganska enkelt. Jag kan tycka att allt nytt och de flesta uppgifter går bra då man får steg-för-steg förklaringar från videos och även mycket hjälp från föreläsningarna för att komma in i allt nytt och klara av uppgifterna.
+
+* Hur kändes det att kompilera LESS till CSS, var det något du reflekterade över?
+
+Det gick ganska smidigt med att kompilera LESS till CSS. Allt med LESS är nytt för mig men det kändes inte så svårt.
+
+* Kommentera ditt tema, hur kan man beskriva dess design och hade du några planer på “design” när du byggde ditt tema?
+
+Jag har haft lite svårt att tänka på tema och dess design än så länge. Jag har bara försökt följa kraven i uppgifterna och lämnat designen lite utanför än så länge. Jag har dock gått och funderat hur jag ska designa utifrån ett tema som intresserar mig. Nu har jag mest gått in på olika sidor som tipsades om under föreläsningen för att så småningom börja arbeta mer inriktat på tema och design.
+
+* Vilken är din TIL för detta kmom?
+
+Allt med LESS var nytt och jag var inte heller bekant med Makefiler sedan tidigare. Det finns så mycket att tänka på och ibland känns det något rörigt men det har fungerat bra tack vare all hjälp från videos, läsmaterial och föreläsningarna.
